add share details in progress
