# lets_ride/dtos/dtos.py
@@ -1,0 +1,9 @@
+from dataclasses import dataclass
+
+@dataclass
+class UserProfileDTO:
+    username: str
+    gender: str
+    email: str
+    phone_number: str
+    image_url: str
